# thesis

./: .env.example  .gitignore  CLAUDE.md  MVP Design Doc.md
backend/: README.md  pyproject.toml
backend/src/ose/: __init__.py  contracts.py  model.py
backend/src/ose/mathx/: __init__.py  belief.py  blackscholes.py  normal.py  payoff.py  riskneutral.py  scoring.py
backend/src/ose/providers/: __init__.py  base.py  fixture.py
backend/tests/: conftest.py  test_belief.py  test_blackscholes.py  test_fixture.py  test_payoff.py  test_riskneutral.py  test_scoring.py
design/: landing-type-options.html
docs/: build-plan.md  decisions-open.md  handoff-prompt.md
docs/prompts/: slice-1-website.md  slice-2-candidate-generation.md  slice-3-scoring-pipeline.md  slice-4-bundle-api.md  slice-5-real-data.md  slice-6-extras.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: Landing.tsx  Stage.tsx  Toggles.tsx
frontend/src/core/: belief.ts  grid.ts  scoring.ts
frontend/src/data/: loadBundle.ts
frontend/src/lib/: format.ts  summary.ts
frontend/src/mock/: bundle.json
frontend/src/rail/: BottomRail.tsx  Card.tsx  Rail.tsx  Row.tsx  SortBar.tsx  Sparkline.tsx  TunePanel.tsx  bottomRail.css  index.ts  rail.css  useFlip.ts  useFlipX.ts
frontend/src/state/: useEngine.ts
frontend/src/styles/: app.css  base.css  tokens.css
frontend/src/types/: contracts.ts
frontend/src/ui/: MicroLabel.tsx  Num.tsx  Wordmark.tsx
frontend/src/viz/: Axes.tsx  BeliefCanvas.tsx  BeliefCloud.tsx  BeliefFog.ts  (+32 more)
(+2 files in other folders)
