[project]
name = "ose"
version = "0.0.1"
description = "Options Strategy Engine -- turns a drawn belief into ranked optimal option structures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",        # smile spline (UnivariateSpline) + IV root-find (brentq)
    "pydantic>=2.7",      # wire contracts / API models
    "fastapi>=0.111",     # the bundle API (Section 10.6)
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",        # Tradier REST adapter (Section 7.8)
    "python-dotenv>=1.0", # server-side secrets (Section 10.7)
]

[project.optional-dependencies]
fallback = ["yfinance>=0.2.40"]   # no-auth offline fallback provider (Section 7.8)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ose"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
